# fastapi_master

./: main.py  pyproject.toml
.github/: copilot-instructions.md
fast_zero/: database.db  pyproject.toml
fast_zero/fast_zero/: app.py  database.py  models.py  schemas.py
fast_zero/tests/: conftest.py  test_app.py  test_db_schema.py
fastapi_master/: app.py
